--- a/_posts/2025-12-10-ai-wait.md
+++ b/_posts/2025-12-10-ai-wait.md
@@ -2,8 +2,8 @@
 title: "Waiting for AI to respond..."
 ---
 
-CSS is so easy, I say
-SQL is like CSS for DB, someone else says
+CSS is so easy, I say.
+SQL is like CSS for DB, someone else says.
 
 Sure.
 I actually like SQL, RegEx, etc.
